#
#  Name: RELEASE_NOTES
#
#  Rem: This files describes release notes for
#       the Xycom 2445 driver and device support.
#
#  Auth: dd-mmm-yyyy, Andy Foster        (USERNAME)
#  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
#--------------------------------------------------------------
#  Mod:
#        29-Apr-2009, K. Luchini         (LUCHINI):
#          release xy2445-R1-0-lcls1 
#        27-Apr-2009, K  Luchini         (LUCHINI):
#          release xy2445-R2-0-0
#        06-Nov-2008, K. Luchini         (LUCHINI):
#          release xy2445-R1-0-6
#        21-Feb-2008, K. Luchini         (LUCHINI):
#          release xy2445-R1-0-5
#        10-Dec-2007, K. Luchini         (LUCHINI):
#          release xy2445-R1-0-4
#        08-Oct-2007, K. Luchini         (LUCHINI):
#          release xy2445-R1-0-3
#          release xy2445-R1-0-2
#        30-Aug-2007, K. Luchini         (LUCHINI):
#          release xy2445-R1-0-1
#
#==============================================================
#
xy2444-R1-0-lcls1: Use naming convention for tag

xy2445-R2-0-0:   Build with base-R3-14-8-2=lcls-3
                 Build with rtems-4-9-1

xy2445-R1-0-6:   Build with base-R3-14-8-2
                 Build with ipac-R2-8-lcls3
                 Change drvier to use volatile for ptrs to
                 onboard registers
                 
xy2445-R1-0-5:   Build with base-R3-14-9-lcls1
                 Build with ipac-R2-8-lcls4
                 Replace CONFIG_APP with CONFIG_SITE
                 Add RELEASE_SITE            

xy2445-R1-0-4:   Backed out epics base-R3-14-8-2-lcls2
                 Build with ipac-R2-8-lcls3

xy2445-R1-0-3:   Build with base-R3-14-9-lcls1
                 Build with extensions-R3-14-9
                 Build with ipac-R2-8-lcls2

xy2445-R1-0-2:   Build with base-R3-14-8-2-lcls2
                 Build with ipac-R2-8-lcls1

xy2445-R1-0-1:   Build with ipac-R1-0-2 instead of ipac-R1-0-1

xy2445-R1-0-0:   Initial release