@@ -10,6 +10,8 @@
 #  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
 #--------------------------------------------------------------
 #  Mod:
+#        05-May-2009, S. Peng            (pengs):
+#          Comments out readback during init to help restore
 #        29-Apr-2009, K. Luchini         (LUCHINI):
 #          Now built under RTEMS-4.9.1 and EPICS-R3.14.8.2
 
